--- a/css/layout/_section_contato.css
+++ b/css/layout/_section_contato.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     background-color: rgb(186, 241, 223);
     border-radius: 40px;
-    margin: 2% 20%;
+    margin: 0% 20% 5%;
     padding: 2%;
 }
 
